0.3.2
=======
(bug fix release, release date to be announced)

* check max_content_length negative
* add set_backlog (default 8192)
* add set_picoev_max_fd (default 8192)
* support keep-alivei timeout (use set_keepalive method, set timeout value)
* various bug fixes


0.3.1
=======

* fix python2.5 build error


0.3
=======

* support keep-alive (use set_keepalive)
* support websocket(experimental)
* various bug fixes


0.2.1
=======

* use TCP_DEFER_ACCEPT
* update http parser
* change max header num and size
* fix finally call response close
* add guniconr worker entry point 
* various bug fixes

0.2
=======

* support greenlet continuation (use greenlet C/API. suspend and resume support)
* add client object to wsgi environ
